align items and fix animation unsmooth in FF

--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -71,16 +71,13 @@
   }
 
   &__type {
-    display: inline-block;
-    margin: 0 0 0 -15px;
+    display: flex;
+    align-items: center;
     opacity: 1;
     transition: all .15s ease-in-out;
   }
 
   &__label {
-    display: inline-block;
-    padding-left: 15px;
-    line-height: 1;
   }
 
   &__id {
